--- a/istio/service_entry_oneagent.yml
+++ b/istio/service_entry_oneagent.yml
@@ -5,7 +5,7 @@ metadata:
   name: dynatrace-oneagent-hostnames
 spec:
   hosts:
-  - tno85405.live.dynatrace.com
+  - sob87739.live.dynatrace.com
   - sg-us-east-1-34-203-81-189-prod-us-east-cluster-2.live.ruxit.com
   - sg-us-east-1-54-164-42-22-prod-us-east-cluster-2.live.ruxit.com
   - sg-us-east-1-54-164-49-176-prod-us-east-cluster-2.live.ruxit.com
